@@ -1,3 +1,5 @@
+  - more explanation of purpose, limitations and alternatives in the POD
+
 1.000 Oct 3 2009
   - Dumper() returns concise Data::Dumper object
   - Dumper($ref) returns concisely dumped ref
